# fractal-visualization

./: CMakeLists.txt  README.md  Shader.cpp  Shader.h  Tetra.cpp  WindowHandler.hpp  fractal-visualization.cpp  main.cpp  shader_utils.cpp  shader_utils.h
Mandelbrot/: a.out  mandelbrot_cuda.cu  mandelbrot_omp.cpp  mandelbrot_omp.h
Mandlebrot/: .~lock.Mandlebrot.csv#  .~lock.omp_test.csv#  a.out  mandelbrot_NoThreading.cpp  mandelbrot_cuda.cu  mandelbrot_omp.cpp  omp_mandelbrot
shaders/: julia.frag  mandelbrot.frag  shader.frag  shader.vert
